vbnc/vbnc/vbnc/tests/Errors/30060-13.vb
Class T
    Const M_String As String = 2S
End Class